2012-10-04  Albert Chu  <chu11@llnl.gov>
	
	* META, NEWS: update for release

	* tagged cerebro-1-16-1

2012-10-04  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_debug.h: New file.

	* src/cerebrod/: Do not allow debug messages to output unless
	running in foreground.
	
2012-09-26  Albert Chu  <chu11@llnl.gov>
	
	* META, NEWS: update for release

	* tagged cerebro-1-15-1
	
2012-09-25  Albert Chu  <chu11@llnl.gov>
	
	* cerebrod/: Support -d and -c in production builds of cerebrod,
	including useful debug flags in cerebro.conf.

	* src/libs/debug/debug.h: Output more debugging information in
	production builds.
	
2012-03-02  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/error.h, src/libs/common/error.c
	(err_init_exit_value): New function.
	
2011-11-07  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-14-1

2011-11-07  Albert Chu  <chu11@llnl.gov>

	* Additional doc updates.

	* man/cerebro.7: Removed and replaced with cerebro.7.in.

	* configure.ac: Update appropriately for generated manpage.
	
2011-11-07  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-13-1

2011-11-07 Albert Chu  <chu11@llnl.gov>

	* Various manpage updates.
	
2011-10-21 Albert Chu  <chu11@llnl.gov>

	* Update copyright years globally.
	
2011-07-08 Frederik Ferner <frederik.ferner@diamond.ac.uk>

	* Replace literal string '/usr/lib64/cerebro' with
	CEREBRO_MODULES_DIR.
	
2011-06-21  Albert Chu  <chu11@llnl.gov>

	* Update for building on RHEL6.  Add Makefile.in, configure,
	config/, libltdl/, etc. for building straight out of the tree.
	
2011-05-02  Albert Chu  <chu11@llnl.gov>

	* src/libs/modules/module_util.c: Remove accidental debug left in.

2010-12-03  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-12-1

2010-12-03  Albert Chu  <chu11@llnl.gov>

	* Update various CEREBRO_DBG error messages to CEREBRO_ERR.
	
2010-08-17  Albert Chu  <chu11@llnl.gov>
