@@ -89,6 +89,12 @@ AC_CEREBRO_CONFIG_FILE
 AC_CEREBRO_METRIC_CONTROL_PATH
 
 #
+# Check for special build conditions
+#
+AC_GETTIMEOFDAY_RETRY
+AM_CONDITIONAL(WITH_GETTIMEOFDAY_RETRY, [test "$ac_with_gettimeofday_retry" = "yes"])
+
+#
 # Check for static module compilation
 #
 AC_STATIC_MODULES
